# mdflow

./: .env.example  .gitignore  README.md  mdflow.yaml  pyproject.toml  start-mdflow.bat
docs/: cli-spec.md  execution-v2-design.md  node-format.md  project-config-format.md  project-structure.md  run-files-format.md  studio-pages.md  validate-rules.md  workflow-format.md
docs/ui-reference/: workflow-overview-alignment.md
scripts/: start-mdflow.ps1
src/mdflow/: __init__.py  __main__.py  cli.py  config.py  errors.py  models.py  parser.py  resolver.py  runner.py  runtime.py  studio_api.py  trace.py  validator.py
src/mdflow/executors/: __init__.py  llm.py  script.py
src/mdflow/studio/: app.py  schemas.py
tests/: README.md
tests/integration/: test_cli.py  test_studio_api.py
tests/unit/: test_config.py  test_llm_executor.py  test_parser.py  test_resolver.py  test_runner.py  test_validator.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: data.js  main.js  main.tsx  styles.css
web/src/app/: router.tsx
web/src/components/: AppShell.tsx  CopyWorkflowDialog.tsx  NodeEditorDrawer.tsx  NodeInspector.tsx  OutputBrowser.tsx  OutputPreview.tsx  RunDialog.tsx  RunStatusBar.tsx  TraceViewer.tsx  WorkflowGraph.tsx  WorkflowOverviewWorkbench.tsx  WorkflowTable.tsx
web/src/lib/: api.ts  types.ts  workflowLayout.ts  workflowLayoutInspector.ts
web/src/pages/: LayoutLabPage.tsx  RunDetailPage.tsx  WorkflowDetailPage.tsx  WorkflowLayoutInspectorPage.tsx  WorkflowListPage.tsx
workflows/problem_gen/: workflow.md
(+39 files in other folders)
