[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mdflow"
version = "0.1.0"
description = "Markdown-native local workflow runner for LLM and CLI tasks"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "httpx>=0.27.0",
]

[project.scripts]
mdflow = "mdflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
